src/objects/Delivery_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Action_Required__c</fullName>
        <label>Action Required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approval__c</fullName>
        <label>Approval</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <formula>Text(Organisation__r.Channel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <formula>Volume__c  *  Special_Assistance_Requested__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Delivery Schedules (Dealer)</relationshipLabel>
        <relationshipName>Delivery_Schedule_Dealer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finance_Approved__c</fullName>
        <label>Finance Approved</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Requested__c</fullName>
        <label>Finance Requested</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Approved__c</fullName>
        <label>Freight Approved</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Requested__c</fullName>
        <label>Freight Requested</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incremental_Forecast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incremental to Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Delivery Schedules</relationshipLabel>
        <relationshipName>Delivery_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organisation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Delivery Schedules (Organisation)</relationshipLabel>
        <relationshipName>Delivery_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Approved__c</fullName>
        <label>Other Approved</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Requested__c</fullName>
        <label>Other Requested</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Text(Dealer__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Relaxation_Approved__c</fullName>
        <label>Registration Relaxation Approved</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Relaxation_Requested__c</fullName>
        <label>Registration Relaxation Requested</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Month__c</fullName>
        <label>Reporting Month</label>
        <referenceTo>Reporting_Month__c</referenceTo>
        <relationshipLabel>Delivery Schedules</relationshipLabel>
        <relationshipName>Delivery_Schedule</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Special_Assistance_Approved__c</fullName>
        <label>Special Assistance Approved</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Assistance_Requested__c</fullName>
        <label>Special Assistance Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Delivery Schedules</relationshipLabel>
        <relationshipName>Delivery_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Volume</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekly_Special__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Weekly Special</label>
        <type>Checkbox</type>
    </fields>
    <label>Delivery Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Report_Month__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Region__c</columns>
        <columns>Channel__c</columns>
        <columns>Organisation__c</columns>
        <columns>Dealer__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Volume__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DS-{00000}</displayFormat>
        <label>Delivery Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Opportunity_Status</fullName>
        <active>true</active>
        <errorConditionFormula>OR(TEXT(Opportunity__r.StageName) = &apos;Closed Lost&apos;, TEXT(Opportunity__r.StageName) = &apos;Discontinued&apos;)</errorConditionFormula>
        <errorMessage>Cannot add a Delivery Schedule to a Closed Lost or Discontinued Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Level</fullName>
        <active>true</active>
        <errorConditionFormula>Vehicle__r.SFDC_Product_Level__c &lt;&gt; 1&amp;&amp; Vehicle__r.Do_Not_Enforce_Product_Level_Validation__c = FALSE</errorConditionFormula>
        <errorMessage>Select a vehicle at level 1 in the product hierarchy.</errorMessage>
    </validationRules>
</CustomObject>